--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "user management service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format:fix": "npx prettier . --write",
+    "format:check": "npx prettier . --check"
   },
   "author": "zeeshan shaikh <skzeeshan10011@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^24.1.0",
+    "prettier": "3.6.2",
     "typescript": "^5.8.3"
   }
 }
