--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-  "name": "auth-service",
-  "version": "1.0.0",
-  "description": "user management service",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format:fix": "npx prettier . --write",
-    "format:check": "npx prettier . --check"
-  },
-  "author": "zeeshan shaikh <skzeeshan10011@gmail.com>",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^24.1.0",
-    "prettier": "3.6.2",
-    "typescript": "^5.8.3"
-  }
+    "name": "auth-service",
+    "version": "1.0.0",
+    "description": "user management service",
+    "main": "index.js",
+    "scripts": {
+        "dev": "node src/server.ts",
+        "format:fix": "npx prettier . --write",
+        "format:check": "npx prettier . --check",
+        "lint:check": "eslint . --check",
+        "lint:fix": "eslint . --fix"
+    },
+    "author": "zeeshan shaikh <skzeeshan10011@gmail.com>",
+    "license": "ISC",
+    "devDependencies": {
+        "@eslint/js": "^9.32.0",
+        "@types/node": "^24.1.0",
+        "eslint": "^9.32.0",
+        "prettier": "3.6.2",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.38.0"
+    }
 }
