--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "format:fix": "npx prettier . --write",
         "format:check": "npx prettier . --check",
         "lint:check": "eslint . --check",
-        "lint:fix": "eslint . --fix"
+        "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
+        "prepare": "husky"
     },
     "author": "zeeshan shaikh <skzeeshan10011@gmail.com>",
     "license": "ISC",
@@ -16,8 +17,16 @@
         "@eslint/js": "^9.32.0",
         "@types/node": "^24.1.0",
         "eslint": "^9.32.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.2",
         "prettier": "3.6.2",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.38.0"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "npm run format:fix",
+            "npm run lint:fix"
+        ]
     }
 }
