--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-    "include": ["src", "eslint.config.mjs"],
+    "exclude": ["dist", "node_modules", "eslint.config.mjs"],
+    "include": ["src"],
     "compilerOptions": {
         /* Visit https://aka.ms/tsconfig to read more about this file */
 
