--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
             "npm run format:fix",
             "npm run lint:fix"
         ]
+    },
+    "dependencies": {
+        "dotenv": "^17.2.1"
     }
 }
