--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "user management service",
     "main": "index.js",
     "scripts": {
-        "dev": "node src/server.ts",
+        "dev": "nodemon src/server.ts",
         "format:fix": "npx prettier . --write",
         "format:check": "npx prettier . --check",
         "lint:check": "eslint . --check",
@@ -15,21 +15,24 @@
     "license": "ISC",
     "devDependencies": {
         "@eslint/js": "^9.32.0",
+        "@types/express": "^5.0.3",
         "@types/node": "^24.1.0",
         "eslint": "^9.32.0",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.2",
+        "nodemon": "^3.1.10",
         "prettier": "3.6.2",
+        "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.38.0"
     },
     "lint-staged": {
         "*.ts": [
-            "npm run format:fix",
-            "npm run lint:fix"
+            "npm run format:fix"
         ]
     },
     "dependencies": {
-        "dotenv": "^17.2.1"
+        "dotenv": "^17.2.1",
+        "express": "^5.1.0"
     }
 }
