--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@eslint/js": "^9.32.0",
         "@types/express": "^5.0.3",
+        "@types/http-errors": "^2.0.5",
         "@types/node": "^24.1.0",
         "eslint": "^9.32.0",
         "husky": "^9.1.7",
@@ -34,6 +35,7 @@
     "dependencies": {
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
+        "http-errors": "^2.0.0",
         "winston": "^3.17.0"
     }
 }
