--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "version": "1.0.0",
     "description": "user management service",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "dev": "nodemon src/server.ts",
+        "test": "jest --watch --runInBand",
         "format:fix": "npx prettier . --write",
         "format:check": "npx prettier . --check",
         "lint:check": "eslint . --check",
@@ -17,12 +19,17 @@
         "@eslint/js": "^9.32.0",
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
+        "@types/jest": "^30.0.0",
         "@types/node": "^24.1.0",
+        "@types/supertest": "^6.0.3",
         "eslint": "^9.32.0",
         "husky": "^9.1.7",
+        "jest": "^30.0.5",
         "lint-staged": "^16.1.2",
         "nodemon": "^3.1.10",
         "prettier": "3.6.2",
+        "supertest": "^7.1.4",
+        "ts-jest": "^29.4.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.38.0"
