--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "exclude": ["dist", "node_modules", "eslint.config.mjs"],
-    "include": ["src"],
+    "include": ["src/**/*"],
     "compilerOptions": {
         /* Visit https://aka.ms/tsconfig to read more about this file */
 
