--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
 
         /* Language and Environment */
         "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-        // "lib": [],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
+        "lib": [
+            "ES6"
+        ] /* Specify a set of bundled library declaration files that describe the target runtime environment. */,
         // "jsx": "preserve",                                /* Specify what JSX code is generated. */
         // "libReplacement": true,                           /* Enable lib replacement. */
         // "experimentalDecorators": true,                   /* Enable experimental support for legacy experimental decorators. */
@@ -110,6 +112,8 @@
 
         /* Completeness */
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-        "skipLibCheck": true /* Skip type checking all .d.ts files. */
+        "skipLibCheck": true /* Skip type checking all .d.ts files. */,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true
     }
 }
