--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "license": "ISC",
     "devDependencies": {
         "@eslint/js": "^9.32.0",
+        "@types/bcrypt": "^6.0.0",
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
         "@types/jest": "^30.0.0",
@@ -43,6 +44,7 @@
         ]
     },
     "dependencies": {
+        "bcrypt": "^6.0.0",
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
         "http-errors": "^2.0.0",
