--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
         "@types/jest": "^30.0.0",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.1.0",
         "@types/supertest": "^6.0.3",
         "cross-env": "^10.0.0",
@@ -40,7 +41,8 @@
     },
     "lint-staged": {
         "*.ts": [
-            "npm run format:fix"]
+            "npm run format:fix"
+        ]
     },
     "dependencies": {
         "bcrypt": "^6.0.0",
@@ -48,6 +50,7 @@
         "express": "^5.1.0",
         "express-validator": "^7.2.1",
         "http-errors": "^2.0.0",
+        "jsonwebtoken": "^9.0.2",
         "pg": "^8.14.1",
         "reflect-metadata": "^0.2.2",
         "typeorm": "0.3.25",
