add self endpoint

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@eslint/js": "^9.32.0",
         "@types/bcrypt": "^6.0.0",
+        "@types/cookie-parser": "^1.4.9",
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
         "@types/jest": "^30.0.0",
@@ -31,6 +32,7 @@
         "husky": "^9.1.7",
         "jest": "^30.0.5",
         "lint-staged": "^16.1.2",
+        "mock-jwks": "^1.0.10",
         "nodemon": "^3.1.10",
         "prettier": "3.6.2",
         "supertest": "^7.1.4",
@@ -46,11 +48,14 @@
     },
     "dependencies": {
         "bcrypt": "^6.0.0",
+        "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
+        "express-jwt": "^8.5.1",
         "express-validator": "^7.2.1",
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^9.0.2",
+        "jwks-rsa": "^3.2.0",
         "pg": "^8.14.1",
         "reflect-metadata": "^0.2.2",
         "typeorm": "0.3.25",
