--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "jwks-rsa": "^3.2.0",
         "pg": "^8.14.1",
         "reflect-metadata": "^0.2.2",
+        "rsa-pem-to-jwk": "^1.1.3",
         "typeorm": "0.3.25",
         "winston": "^3.17.0"
     }
