setup test coverage

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
         "build":"tsc",
-        "test": "jest --watch --runInBand",
+        "test": "jest --no-cache --coverage --all --runInBand",
+        "test:watch": "jest --watch --runInBand",
         "format:fix": "npx prettier . --write",
         "format:check": "npx prettier . --check",
         "lint:check": "eslint .",
