--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
         "build":"tsc",
+        "lint": "eslint .",
         "test": "jest --no-cache --coverage --all --runInBand",
         "test:watch": "jest --watch --runInBand",
         "format:fix": "npx prettier . --write",
