--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@eslint/js": "^9.32.0",
         "@types/bcrypt": "^6.0.0",
         "@types/cookie-parser": "^1.4.9",
+        "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
         "@types/jest": "^30.0.0",
@@ -55,6 +56,7 @@
         "@types/bcryptjs": "^2.4.6",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
         "dotenv": "^17.2.1",
         "express": "^5.1.0",
         "express-jwt": "^8.5.1",
