--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "version": "1.0.0",
     "description": "user management service",
     "main": "index.js",
-    "type": "commonjs",
     "scripts": {
         "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
         "build": "tsc",
@@ -33,6 +32,7 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/node": "^24.1.0",
         "@types/supertest": "^6.0.3",
+        "@types/uuid": "^10.0.0",
         "cross-env": "^10.0.0",
         "eslint": "^9.32.0",
         "husky": "^9.1.7",
@@ -68,6 +68,7 @@
         "reflect-metadata": "^0.2.2",
         "rsa-pem-to-jwk": "^1.1.3",
         "typeorm": "0.3.25",
+        "uuid": "^8.3.2",
         "winston": "^3.17.0"
     }
 }
